@@ -895,6 +895,9 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 #define cSetting_default_2fofc_map_rep      659
 #define cSetting_atom_type_format           660
 #define cSetting_autoclose_dialogs          661
+#define cSetting_bg_gradient                662
+#define cSetting_bg_rgb_top                 663
+#define cSetting_bg_rgb_bottom              664
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -905,6 +908,6 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       662
+#define cSetting_INIT                       665
 
 #endif
