@@ -4,6 +4,14 @@ CHANGE LOG
 
 2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
+	* introducing gradient backgrounds (non-ray tracing; testing)
+
+	* Windows bug fixes
+
+	* Rlight-click Volumes fix
+
+2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
 	* PyMOL v1.4b1 -- adds volumes, glew, shaders, bug fixes, etc
 
 2011-02-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>
